--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Jorge Borja">
 <meta name="author" content="Jose Mercado">
 
-<title>Series de Tiempo - Ts_q</title>
+<title>Series de Tiempo - Series de tiempo</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -78,6 +78,35 @@ ul.task-list li input[type="checkbox"] {
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+const typesetMath = (el) => {
+  if (window.MathJax) {
+    // MathJax Typeset
+    window.MathJax.typeset([el]);
+  } else if (window.katex) {
+    // KaTeX Render
+    var mathElements = el.getElementsByClassName("math");
+    var macros = [];
+    for (var i = 0; i < mathElements.length; i++) {
+      var texText = mathElements[i].firstChild;
+      if (mathElements[i].tagName == "SPAN") {
+        window.katex.render(texText.data, mathElements[i], {
+          displayMode: mathElements[i].classList.contains('display'),
+          throwOnError: false,
+          macros: macros,
+          fleqn: false
+        });
+      }
+    }
+  }
+}
+window.Quarto = {
+  typesetMath
+};
+</script>
 
 <link rel="stylesheet" href="styles.css">
 </head>
@@ -152,7 +181,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Ts_q</h1>
+<h1 class="title">Series de tiempo</h1>
 </div>
 
 
@@ -189,8 +218,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>This is a Quarto website.</p>
-<p>To learn more about Quarto websites visit <a href="https://quarto.org/docs/websites" class="uri">https://quarto.org/docs/websites</a>.</p>
+<p>Un proceso estocástico es una colección o familia de variables aleatorias <span class="math inline">\(\{X_{t}\}_{t\in I}\)</span> ordenadas según el subíndice <span class="math inline">\(t\)</span> que en general se suele identificar con el tiempo. Llamamos trayectoria del proceso a una realización del proceso estocástico. Si <span class="math inline">\(I\)</span> es discreto, el proceso es en tiempo discreto. Si <span class="math inline">\(I\)</span> es continuo, el proceso es en tiempo continuo.</p>
 
 
 
