--- a/site/index.html
+++ b/site/index.html
@@ -186,6 +186,12 @@ window.Quarto = {
  <span class="menu-text">Predicción Series de Tiempo - Python</span></a>
   </div>
 </li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./ts_r.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Predicción Series de Tiempo - R</span></a>
+  </div>
+</li>
       </ul>
   </li>
     </ul>
